--- a/kgBuilder-pro/src/main/resources/application-dev.yml
+++ b/kgBuilder-pro/src/main/resources/application-dev.yml
@@ -18,16 +18,16 @@ spring:
 #      url: bolt://192.168.20.153:7687  #3.x
       url: neo4j://localhost:7687 #4.x
       username: neo4j
-      password: testpassword
+      password: 12345678
   datasource:
-      url: jdbc:mysql://localhost:3306/kgdemo?useSSL=false&serverTimezone=UTC
+      url: jdbc:mysql://localhost:3306/kgdemo?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
       driverClassName: com.mysql.cj.jdbc.Driver
       username: root
-      password: root
+      password: 1q2w3e4r
       type: com.zaxxer.hikari.HikariDataSource
 mybatis:
   typeAliasesPackage: com.warmer.kgmaker.entity
   mapperLocations: classpath*:/mapping/*.xml
 file:
   serverurl:  http://localhost:8080
-  location : D:\\data\\   #如果是Windows情况下，格式是 D:\\kgmanager\\csv\\   linx 格式"/home/kgmanager/csv/";
+  location : C:\\data\\   #如果是Windows情况下，格式是 D:\\kgmanager\\csv\\   linx 格式"/home/kgmanager/csv/";
