--- a/kgBuilder-ui/package.json
+++ b/kgBuilder-ui/package.json
@@ -11,6 +11,7 @@
     "@antv/x6": "^1.28.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.4.3",
     "element-ui": "^2.13.2",
     "html2canvas": "^1.4.0",
     "jquery": "^3.5.1",
